--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "express": "~4.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "connect-mongo": "~0.4.1",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "express-partials":"*",
-    "express-session":"~1.1.0",
-    "formidable":"~1.0.14",
-    "mongoose":"~3.8.9",
+    "express": "~4.0.0",
+    "express-partials": "*",
+    "express-session": "~1.1.0",
+    "formidable": "~1.0.14",
+    "gm": "^1.16.0",
     "hjs": "~0.0.6",
-    "connect-mongo":"~0.4.1"
+    "mongoose": "~3.8.9",
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.0"
   }
 }
