--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formidable": "~1.0.14",
     "gm": "^1.16.0",
     "hjs": "~0.0.6",
+    "moment": "^2.6.0",
     "mongoose": "~3.8.9",
     "morgan": "~1.0.0",
     "static-favicon": "~1.0.0"
