--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.6.0",
     "mongoose": "~3.8.9",
     "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "async": "^0.9.0"
   }
 }
