--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "~1.0.0",
     "connect-mongo": "~0.4.1",
     "cookie-parser": "~1.0.1",
@@ -19,7 +20,7 @@
     "moment": "^2.6.0",
     "mongoose": "~3.8.9",
     "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0",
-    "async": "^0.9.0"
+    "nodemailer": "^0.7.0",
+    "static-favicon": "~1.0.0"
   }
 }
