--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "~3.8.9",
     "morgan": "~1.0.0",
     "nodemailer": "^0.7.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "socket.io": "^1.0.6"
   }
 }
