--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "body-parser": "~1.0.0",
+    "compression": "^1.0.11",
     "connect-mongo": "~0.4.1",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
@@ -21,8 +22,8 @@
     "mongoose": "~3.8.9",
     "morgan": "~1.0.0",
     "nodemailer": "^0.7.0",
-    "static-favicon": "~1.0.0",
-    "socket.io": "^1.0.6"
+    "socket.io": "^1.0.6",
+    "static-favicon": "~1.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
